package wardrobeManager.util;

public enum Colours {
    RED,
    GREEN,
    BLUE,
    YELLOW,
    BLACK,
    WHITE,
    ORANGE,
    PURPLE,
    PINK,
    BROWN,
    GRAY,
    CYAN,
    MAGENTA,
    TEAL,
    MAROON,
    NAVY_BLUE,
    OLIVE_GREEN,
    GOLD,
    SILVER,
    INDIGO,
    VIOLET,
    TURQUOISE,
    LIME,
    CORAL,
    TAN,
    PEACH,
    IVORY,
    SALMON,
    PLUM,
    CHOCOLATE,
    KHAKI,
    MUSTARD,
    BRONZE,
    SAGE,
    CHARCOAL,
    AQUA,
    AMBER,
    LAVENDER,
    MINT
}
