package wardrobeManager.util;

public enum Season {
    SPRING,
    SUMMER,
    AUTUMN,
    WINTER,
    ALL_SEASONS;
}
